--- a/src/App.css
+++ b/src/App.css
@@ -166,3 +166,7 @@ input[type=submit] {
 input[type=submit]:hover {
 	background-color: #45a049;
 }
+
+input[type=submit]:active {
+	background-color: #a04594;
+}
